  \subsection{NEW FEATURES}{
    \itemize{
      \item There is a new option, \code{options(CBoundsCheck=)}, which
      controls how \code{.C()} and \code{.Fortran()} pass arguments to
      compiled code.  If true (which can be enabled by setting the
      environment variable \env{R_C_BOUNDS_CHECK} to \samp{yes}), raw,
      integer, double and complex arguments are always copied, and
      checked for array over-runs on return from the compiled code.

      This not intended for routine use, but can be very helpful in
      finding segfaults in package code.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives a warning rather than a
      note if it finds calls to \code{abort}, \code{assert} or
      \code{exit} in compiled code, and has been able to find the
      \file{.o} file in which the calls occur.

      Such calls can terminate the \R process which loads the package.

      \item \command{R CMD check} now checks if a package can be loaded
      by \code{library(pkgname, lib.loc = "somewhere")} without being on
      the library search path (unless it is already installed in
      \code{.Library}, when it always will be).
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The \code{ENCODING} argument to \code{.C()} is defunct.
      Use \code{iconv()} instead.

      \item The \code{.Internal(eval.with.vis)} non-API function has
      been removed.

      \item Support for the converters for use with \code{.C()} is not
      compiled in by default: compile \file{src/main/dotcode.c} with
      \option{-DSUPPORT_CONVERTERS} to re-enable this (untested as we
      know of no examples in packages).
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Passing \code{NULL} to \code{.C()} is now an error.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{